if (!['7.5'].findAll { gradle.gradleVersion == it }) {
    logger.warn "WARNING: Du benytter en annen versjon av Gradle enn hva byggesystemet er testet med: ${gradle.gradleVersion}"
}

apply from: file('properties.gradle')

allprojects {
    project.version = base_version + sub_version

    defaultTasks 'build'
    group = 'no.statkart.skif'


    plugins.withType(JavaBasePlugin) {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'windows-1252'
    }

    tasks.withType(Test) {
        if (JavaVersion.current().isJava9Compatible()) {
            jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
        }
    }

    apply plugin: 'idea'

    repositories {
        if (MAVEN_LOCAL_FOR_PROJECT) {
            println '...initializing MAVEN_LOCAL_FOR_PROJECT'
            mavenLocal()
        }
        maven { name = 'public'; url = MAVEN_REPO }

        if (!MAVEN_LOCAL_FOR_PROJECT) {
            mavenLocal()
        }
    }
}

apply from: file('libraries.gradle')

subprojects { Project project ->
    apply plugin: 'project-report'
    apply plugin: 'base' // Så vet vi at vi har clean

    clean {
        delete 'gen'
    }

    def filterTestGroup = { Test test = test, String group, String value ->
        test.with {
            if (testFramework.class.simpleName == 'TestNGTestFramework') {
                if (value == 'INCLUDE') {
                    testFramework.options.includeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: including group '${group}'" }
                } else if (value == 'EXCLUDE') {
                    testFramework.options.excludeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                } else if (value == 'EXCLUDE_WHEN_NO_INCLUDES') {
                    project.afterEvaluate {
                        if (testFramework.options.includeGroups.isEmpty()) {
                            testFramework.options.excludeGroups group
                            test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                        } else {
//                            logMessageWhenTask test "${test.name} configuration: ignoring group '${group}'"
                        }
                    }
                } else {
                    assert value == 'IGNORED' //feil ved ikke gyldig verdi for filtrering av tester
                }
            } else {
                test.doFirst { logger.warn "${test.name} configuration: unable to configure groups('${group}') for ${testFramework.class.simpleName}" }
            }
        }
    }


    plugins.withType(JavaPlugin) {
        // Avhengigheter som trengs for testing (riktignok ikke alle overalt)
        project.dependencies {
            testImplementation libraries.testng
            testImplementation libraries.mockito
            testImplementation libraries.assertj

            compileOnly libraries.jsr305 //for bruk av @Nullable @Nonnull osv - disse brukes på tvers av hele skif APIet
        }

        project.java {
            withSourcesJar()
        }


        /**
         * Testing via TestNG grupper. Se bruk av @Test(groups = "") i koden.
         * Følgende parametere styrer hvilke grupper som blir kjørt:
         *
         * gradle test -DfilterSlowTests=INCLUDE
         * gradle test -DfilterOracleLatest=INCLUDE
         * gradle test -PhibernateVersion=xx for hibernate versjon spesifikke tester
         * osv..
         *
         * GBOK-2266: Tilpasset oppsett for downstream testing i Jenkins
         * Dersom ingen test-oppsett spesifisert så ekskluderes alle grupper.
         * Dersom test-oppsett spesifiseres, kjøres kun spesifisert gruppe.
         *  - På denne måten oppnås disjointe sett av tester slik man unngår å kjøre samme test to ganger i de ulike Jenkins jobbene.
         *
         * En har videre mulighet til ytterligere å spesifisere kombinasjoner av grupper.
         * F.eks. vil gradle test -DfilterHistorikkTests=INCLUDE -DfilterSlowTests=EXCLUDE kjøre alle tester i gruppen historikk, men ikke de som også finnes i gruppen slow.
         * Har man en test annotert med @Test(groups = "kreverHistorikk, slow") vil den testen da ikke kjøres.
         *
         * -DignoreFailures=true stopper ikke eksekvering etter feilende modul og kjører videre. Kjekt for integrasjonstesting som ønsker å kjøre alle tester alltid.
         *
         * --info gir verbos logging av hvilke grupper som faktisk blir inkludert og ekskludert.
         */
        test {
            ignoreFailures = System.getProperty('ignoreFailures', 'false') == 'true' //Gradle feiler ikke dersom denne er true.

            def filterSlowTests = System.getProperty('filterSlowTests', 'EXCLUDE_WHEN_NO_INCLUDES').toUpperCase() //gruppen kan kombineres med andre
            def filterOracleLatest = System.getProperty('filterOracleLatest', 'EXCLUDE').toUpperCase()

            filterTestGroup(it, 'slow', filterSlowTests)
            filterTestGroup(it, 'oracleLatest', filterOracleLatest) // Midlertidig lagt til denne gruppe for å exclude tester som krever seneste oracle versjon

            jvmArgs '-Xmx1024m'
            testLogging.showStandardStreams = true

            inputs.property 'excludedGroups', testFramework.options.includeGroups //trigger re-kjøring av test ved endring av grupper
            inputs.property 'includedGroups', testFramework.options.excludeGroups //trigger re-kjøring av test ved endring av grupper
        }
    }

    project.tasks.withType(Test) { Test test ->  //felles for alle test-tasks
        def singleVm = rootProject.ext.properties['service_mode'] == 'SINGLE_VM'
        def server = rootProject.ext.properties['service_mode'] == 'JEE'
        logger.debug "single_vm is set to ${singleVm} for ${project.path}"
        logger.debug "server is set to ${server} for ${project.path}"

        useTestNG() {  //benytter kun TestNG over alt
//            listeners << 'org.uncommons.reportng.HTMLReporter' // Gradles innebygde rapport viser ikke skipped
            listeners << 'org.testng.reporters.XMLReporter' // For Jenkins, siden Gradle 1.4+ ikke tar med default listeners som standard lenger
        }

        filterTestGroup(test, 'broken', 'EXCLUDE')
        filterTestGroup(test, 'singlevm-required', singleVm ? 'IGNORED' : 'EXCLUDE')
        filterTestGroup(test, 'server-required', server ? 'IGNORED' : 'EXCLUDE')

        systemProperties "org.uncommons.reportng.stylesheet": "${project.rootProject.file('all/test/report/reportng-1.1.3/stylesheets/hudsonesque.css')}"
        systemProperties "org.uncommons.reportng.title": "${project.name} Report"


        inputs.property 'singleVm', singleVm //trigger re-kjøring av test ved endring av parameter

        if (rootProject.hasProperty('test.remote.debug')) {
            jvmArgs '-Xdebug'
            jvmArgs '-Xnoagent'
            jvmArgs '-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y'
        }

        //listening to test execution events
        afterTest { descriptor, result ->
            logger.lifecycle("${result.toString() == 'SUCCESS' ? ' Successfully tested' : 'Failed testing'} : ${descriptor.className}#${descriptor.name}")
            if (result.resultType.name() == 'FAILURE') {
                logger.error("${result.exception}")
            }
        }
    }


    project.idea.module {
        // Får Idea til å legge build katalog for alle moduler i en egen felles topp katalog (out/production, out/test)
        inheritOutputDirs = true

        downloadSources = true
//        downloadJavadoc = true //for jdbc dokumentasjon
    }
}

//SKIF-266: versjon informasjon i distribusjon
allprojects {
    afterEvaluate {
        tasks.withType(Jar) {
            manifest {
                attributes([
                        'Specification-Title': project.name,
                        'Specification-Vendor': 'Statens kartverk',
                        'Specification-Version': base_version,

                        //misc build info
                        'Build-By'     : System.getProperty('user.name'),
                        'Build-Machine': java.net.InetAddress.localHost.hostName,
                        'Build-Repo': MAVEN_REPO,

                        'Implementation-Title': "${project.name} bygget for ${(project.version == null || project.version.contains('-SNAPSHOT') || project.version.contains('-build')) ? 'TEST' : 'Produksjon'}",
                        'Implementation-Vendor': 'Statens kartverk',
                        'Implementation-Version': project.version,
                ])
            }
        }
    }
}
